--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -27,7 +27,7 @@
     height: 300px;
     position: absolute;
     top: 150px;
-    left: 10px;
+    left: 60px;
 
     
     
@@ -37,14 +37,14 @@
     height: 20px;
     position: absolute;
     top: 432.3px;
-    left: 20px;
+    left: 160px;
 }
 
 
 #medida{
     position: absolute;
     top: 427px;
-    left: 20px;
+    left: 180px;
     font-family: 'Open Sans', sans-serif;
     font-size: 2.5vw;
 }
@@ -67,7 +67,7 @@
     width: 200px;
     height: 21px;
     background-color: #9b6e3a;
-    left: 50px;
+    left: 80px;
 }
 
 
@@ -81,11 +81,19 @@
     position: absolute;
     top: 200px;
     border-radius: 10px;  
-    left: 0px;
+    left: 5px;
     display: flex;
     justify-content: space-between; 
 }
 
+#features{
+    display:grid;
+    grid-column-gap: 30px;
+}
+
+#part-galeria{
+margin: 50px;    
+}
 
 
 .img1{
@@ -662,4 +670,3 @@ z-index: 1000;
     height: 240px;
     
 }
-
