--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -50,13 +50,13 @@
 }
 
 #prody{
-    color: rgb(64, 68, 65);
+    color: rgb(21, 22, 22);
     border: none;
     text-decoration: none;
     position: absolute;
-    top: 2730px;
-    font-size: 1.2vw;
-    left: 250px;
+    top: 1846px;
+    font-size: 3vw;
+    left: 10px;
        
 }
 
@@ -74,7 +74,7 @@
 
 .feature{   
 
-    height: 2430px;
+    height: 1650px;
     width: 380px;
     position: absolute;
     top: 200px;  
@@ -96,10 +96,10 @@ margin: 50px;
 .img1{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 2px;
 }
 .rh-2{
     width: 340px;
@@ -112,7 +112,7 @@ margin: 50px;
 .feature-title{
     position: absolute;
     top: 2px;
-    left: 100px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
@@ -121,8 +121,8 @@ margin: 50px;
 .af{
     position: absolute;
     top: 7px;
-    left: 100px;
-    width: 275px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -136,17 +136,17 @@ margin: 50px;
 .img2{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 100px;
-    left: -10px;
+    left:-8px;
 }
 
 .af-1{
     position: absolute;
     top: 115px;
-    left: 100px;
-    width: 275px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -161,17 +161,17 @@ margin: 50px;
 .img3{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 221px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-02{
     position: absolute;
     top: 222px;
-    left: 100px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
@@ -181,8 +181,8 @@ margin: 50px;
     position: absolute;
     top: 227px;
     left: 157px;
-    width: 275px;
-    left: 100px;
+    width: 273px;
+    left: 102px;
     font-size: 3vw;
 }
 
@@ -197,32 +197,32 @@ margin: 50px;
 .img4{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 331px;
-    left: 0px;
+    left: 2px;
 }
 
 .feature-title-01{
     position: absolute;
     top: 110px;
-    left: 100px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 .af-3{
     position: absolute;
-    top: 349px;
+    top: 337px;
     left: 157px;
-    width: 275px;
-    left: 100px;
+    width: 273px;
+    left: 102px;
     font-size: 3vw;
 }
 
 .feature-title-03{
     position: absolute;
-    top: 343px;
-    left: 100px;
+    top: 332px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
@@ -239,27 +239,27 @@ margin: 50px;
 .img5{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 440px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-04{
     position: absolute;
-    top: 455px;
-    left: 100px;
+    top: 441px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-4{
     position: absolute;
-    top: 460px;
+    top: 446px;
     left: 157px;
-    width: 275px;
-    left: 100px;
+    width: 273px;
+    left: 102px;
     font-size: 3vw;
 }
 
@@ -274,26 +274,26 @@ margin: 50px;
 .img6{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 550px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-05{
     position: absolute;
-    top: 567px;
-    left: 100px;
+    top: 552px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-5{
     position: absolute;
-    top: 572px;
-    width: 275px;
-    left: 100px;
+    top: 557px;
+    width: 273px;
+    left: 102px;
     font-size: 3vw;
 }
 
@@ -309,26 +309,26 @@ margin: 50px;
 .img7{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 660px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-06{
     position: absolute;
-    top: 972px;
-    left: 100px;
+    top: 661px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-6{
     position: absolute;
-    top: 977px;
-    left: 100px;
-    width: 275px;
+    top: 666px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -343,26 +343,26 @@ margin: 50px;
 .img8{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 770px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-07{
     position: absolute;
-    top: 1139px;
-    left: 100px;
+    top: 771px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-7{
     position: absolute;
-    top: 1144px;
-    left: 100px;
-    width: 275px;
+    top: 776px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -377,26 +377,26 @@ margin: 50px;
 .img9{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 880px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-08{
     position: absolute;
-    top: 1301px;
-    left: 100px;
+    top: 881px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-8{
     position: absolute;
-    top: 1306px;
-    left: 100px;
-    width: 275px;
+    top: 886px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -412,26 +412,26 @@ margin: 50px;
 .img10{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 990px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-09{
     position: absolute;
-    top: 1465px;
-    left: 100px;
+    top: 991px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-9{
     position: absolute;
-    top: 1470px;
-    left: 100px;
-    width: 275px;
+    top: 996px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -446,26 +446,26 @@ margin: 50px;
 .img11{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 1100px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-10{
     position: absolute;
-    top: 1627px;
-    left: 100px;
+    top: 1101px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-10{
     position: absolute;
-    top: 1632px;
-    left: 100px;
-    width: 275px;
+    top: 1106px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -480,26 +480,26 @@ margin: 50px;
 .img12{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 1210px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-11{
     position: absolute;
-    top: 1789px;
-    left: 100px;
+    top: 1211px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-11{
     position: absolute;
-    top: 1794px;
-    left: 100px;
-    width: 275px;
+    top: 1216px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -514,26 +514,26 @@ margin: 50px;
 .img13{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 1320px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-12{
     position: absolute;
-    top: 1951px;
-    left: 100px;
+    top: 1321px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-12{
     position: absolute;
-    top: 1956px;
-    left: 100px;
-    width: 275px;
+    top: 1326px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -548,26 +548,26 @@ margin: 50px;
 .img14{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 1430px;
-    left: 0px;
+    left: 2px;
 }
 
 
 .feature-title-13{
     position: absolute;
-    top: 2113px;
-    left: 100px;
+    top: 1431px;
+    left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 3.2vw;
 }
 
 .af-13{
     position: absolute;
-    top: 2118px;
-    left: 157px;
-    width: 275px;
+    top: 1436px;
+    left: 102px;
+    width: 273px;
     font-size: 3vw;
 }
 
@@ -582,8 +582,97 @@ margin: 50px;
 .img15{
     height: 96px;
     width: 96px;
-    border-radius: 8px;
+    border-radius: 2px;
     position: absolute;
     top: 1540px;
-    left: 0px;
+    left: 2px;
+}
+
+
+.feature-title-14{
+    position: absolute;
+    top: 1541px;
+    left: 102px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 3.2vw;
+}
+
+.af-14{
+    position: absolute;
+    top: 1546px;
+    left: 102px;
+    width: 273px;
+    font-size: 3vw;
+}
+
+.whats{
+position: fixed;
+width: 60px;
+height: 60px;
+bottom: 40px;
+right: 45px;
+background-color: #25d366;
+color: #fff;
+border-radius: 50px;
+text-align: center;
+font-size: 30px;
+box-shadow: 1px 1px 2px rgb(251, 251, 251);
+z-index: 1000;
+}
+
+.fa-whatsapp{
+    color: rgb(231, 231, 231);
+    margin-top: 16px;
+}
+
+.search-box{
+    position: absolute;
+    top: 219px;
+    left: 965px;
+    background: rgb(226, 226, 226);
+    height: 56px;
+    width: 180px;
+    border-radius: 30px;
+    
+}
+
+.searce-text{
+    position: absolute;
+    top: 230px;
+    left: 1000px;
+    box-shadow: 0 0 0 0;
+    background: none;
+    border: none;
+    outline: none;
+    width: 0;
+}
+
+.search-btn{
+    width: 50px;
+    height: 50px;
+}
+.lupa-azul{
+    position: absolute;
+    top: 15px;
+    left: 140px;
+    width: 25px;
+    height: 25px;
+}
+.lupa-branca{
+    display: none;
+}
+
+
+
+.source-box:hover > .souce-text{
+    width: 320px;
+}
+
+.logo4{
+    position: fixed;
+    top: -85px;
+    left:500px;
+    width: 370px;
+    height: 240px;
+    
 }
