--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -1,4 +1,3 @@
-
 #parte{
     background-color: #38280a;
     border: none;
@@ -23,28 +22,28 @@
 
 
 .logo{
-    width: 270px;
-    height: 300px;
+    width: 240px;
+    height: 270px;
     position: absolute;
-    top: 150px;
-    left: 60px;
+    top: 100px;
+    left: 70px;
 
     
     
 }
 .certo{
-    width:18px;
-    height: 20px;
+    width:16px;
+    height: 14px;
     position: absolute;
-    top: 432.3px;
-    left: 160px;
+    top: 355px;
+    left: 153px;
 }
 
 
 #medida{
     position: absolute;
-    top: 427px;
-    left: 180px;
+    top: 347px;
+    left: 173px;
     font-family: 'Open Sans', sans-serif;
     font-size: 2.5vw;
 }
@@ -62,15 +61,13 @@
 
 #product{
     position: absolute;
-    top: 445px;
+    top: 365px;
     border-radius: 5px;
     width: 200px;
-    height: 21px;
+    height: 20px;
     background-color: #9b6e3a;
-    left: 80px;
+    left: 70px;
 }
-
-
 
 .feature{   
 
@@ -81,15 +78,6 @@
     left: 0px;
 
     justify-content: space-between; 
-}
-
-#features{
-    display:grid;
-    grid-column-gap: 30px;
-}
-
-#part-galeria{
-margin: 50px;    
 }
 
 
@@ -120,7 +108,7 @@ margin: 50px;
 
 .af{
     position: absolute;
-    top: 7px;
+    top: 5px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -144,7 +132,7 @@ margin: 50px;
 
 .af-1{
     position: absolute;
-    top: 115px;
+    top: 113px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -179,7 +167,7 @@ margin: 50px;
 
 .af-2{
     position: absolute;
-    top: 227px;
+    top: 225px;
     left: 157px;
     width: 273px;
     left: 102px;
@@ -212,7 +200,7 @@ margin: 50px;
 }
 .af-3{
     position: absolute;
-    top: 337px;
+    top: 335px;
     left: 157px;
     width: 273px;
     left: 102px;
@@ -256,7 +244,7 @@ margin: 50px;
 
 .af-4{
     position: absolute;
-    top: 446px;
+    top: 444px;
     left: 157px;
     width: 273px;
     left: 102px;
@@ -291,7 +279,7 @@ margin: 50px;
 
 .af-5{
     position: absolute;
-    top: 557px;
+    top: 555px;
     width: 273px;
     left: 102px;
     font-size: 3vw;
@@ -326,7 +314,7 @@ margin: 50px;
 
 .af-6{
     position: absolute;
-    top: 666px;
+    top: 664px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -360,7 +348,7 @@ margin: 50px;
 
 .af-7{
     position: absolute;
-    top: 776px;
+    top: 774px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -394,7 +382,7 @@ margin: 50px;
 
 .af-8{
     position: absolute;
-    top: 886px;
+    top: 884px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -429,7 +417,7 @@ margin: 50px;
 
 .af-9{
     position: absolute;
-    top: 996px;
+    top: 994px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -463,7 +451,7 @@ margin: 50px;
 
 .af-10{
     position: absolute;
-    top: 1106px;
+    top: 1104px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -497,7 +485,7 @@ margin: 50px;
 
 .af-11{
     position: absolute;
-    top: 1216px;
+    top: 1214px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -531,7 +519,7 @@ margin: 50px;
 
 .af-12{
     position: absolute;
-    top: 1326px;
+    top: 1324px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -565,7 +553,7 @@ margin: 50px;
 
 .af-13{
     position: absolute;
-    top: 1436px;
+    top: 1434px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -599,7 +587,7 @@ margin: 50px;
 
 .af-14{
     position: absolute;
-    top: 1546px;
+    top: 1544px;
     left: 102px;
     width: 273px;
     font-size: 3vw;
@@ -627,19 +615,20 @@ z-index: 1000;
 
 .search-box{
     position: absolute;
-    top: 219px;
-    left: 965px;
-    background: rgb(226, 226, 226);
-    height: 56px;
-    width: 180px;
+    top: 150px;
+    left: 250px;
+    background: rgb(231, 230, 230);
+    height: 36px;
+    width: 130px;
     border-radius: 30px;
+    /* margin-top: 16px; */
     
 }
 
 .searce-text{
     position: absolute;
-    top: 230px;
-    left: 1000px;
+    top: 150px;
+    left: 260px;
     box-shadow: 0 0 0 0;
     background: none;
     border: none;
@@ -653,25 +642,19 @@ z-index: 1000;
 }
 .lupa-azul{
     position: absolute;
-    top: 15px;
-    left: 140px;
-    width: 25px;
-    height: 25px;
+    top: 6px;
+    left: 100px;
+    width: 21px;
+    height: 21px;
 }
 .lupa-branca{
     display: none;
 }
 
-
-
-.source-box:hover > .souce-text{
-    width: 320px;
-}
-
 .logo4{
     position: fixed;
     top: -85px;
-    left:500px;
+    left:10px;
     width: 370px;
     height: 240px;
     
