--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -99,19 +99,19 @@
 }
 .feature-title{
     position: absolute;
-    top: 2px;
+    top: 0px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 
 .af{
     position: absolute;
-    top: 5px;
+    top: 6px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-3{
@@ -134,8 +134,8 @@
     position: absolute;
     top: 113px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-4{
@@ -158,10 +158,10 @@
 
 .feature-title-02{
     position: absolute;
-    top: 222px;
+    top: 217px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 
@@ -169,9 +169,9 @@
     position: absolute;
     top: 225px;
     left: 157px;
-    width: 273px;
+    width: 265px;
     left: 102px;
-    font-size: 3vw;
+    font-size: 12px;
 }
 
 .rh-5{
@@ -193,26 +193,26 @@
 
 .feature-title-01{
     position: absolute;
-    top: 110px;
+    top: 106px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 .af-3{
     position: absolute;
     top: 335px;
     left: 157px;
-    width: 273px;
+    width: 265px;
     left: 102px;
-    font-size: 3vw;
+    font-size: 12px;
 }
 
 .feature-title-03{
     position: absolute;
-    top: 332px;
+    top: 327px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 
@@ -236,19 +236,19 @@
 
 .feature-title-04{
     position: absolute;
-    top: 441px;
+    top: 437px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-4{
     position: absolute;
     top: 444px;
     left: 157px;
-    width: 273px;
+    width: 265px;
     left: 102px;
-    font-size: 3vw;
+    font-size: 12px;
 }
 
 .rh-7{
@@ -271,18 +271,18 @@
 
 .feature-title-05{
     position: absolute;
-    top: 552px;
+    top: 546px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-5{
     position: absolute;
-    top: 555px;
-    width: 273px;
+    top: 554px;
+    width: 265px;
     left: 102px;
-    font-size: 3vw;
+    font-size: 12px;
 }
 
 
@@ -306,18 +306,18 @@
 
 .feature-title-06{
     position: absolute;
-    top: 661px;
+    top: 656px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-6{
     position: absolute;
     top: 664px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-9{
@@ -340,18 +340,18 @@
 
 .feature-title-07{
     position: absolute;
-    top: 771px;
+    top: 766px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-7{
     position: absolute;
     top: 774px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-10{
@@ -374,18 +374,18 @@
 
 .feature-title-08{
     position: absolute;
-    top: 881px;
+    top: 876px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15PX;
 }
 
 .af-8{
     position: absolute;
     top: 884px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 
@@ -409,18 +409,18 @@
 
 .feature-title-09{
     position: absolute;
-    top: 991px;
+    top: 986px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-9{
     position: absolute;
     top: 994px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-12{
@@ -443,18 +443,18 @@
 
 .feature-title-10{
     position: absolute;
-    top: 1101px;
+    top: 1096px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-10{
     position: absolute;
     top: 1104px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-13{
@@ -477,18 +477,18 @@
 
 .feature-title-11{
     position: absolute;
-    top: 1211px;
+    top: 1206px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-11{
     position: absolute;
     top: 1214px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-14{
@@ -511,18 +511,18 @@
 
 .feature-title-12{
     position: absolute;
-    top: 1321px;
+    top: 1316px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-12{
     position: absolute;
     top: 1324px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-15{
@@ -545,18 +545,18 @@
 
 .feature-title-13{
     position: absolute;
-    top: 1431px;
+    top: 1426px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-13{
     position: absolute;
     top: 1434px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .rh-16{
@@ -579,18 +579,18 @@
 
 .feature-title-14{
     position: absolute;
-    top: 1541px;
+    top: 1536px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 3.2vw;
+    font-size: 15px;
 }
 
 .af-14{
     position: absolute;
     top: 1544px;
     left: 102px;
-    width: 273px;
-    font-size: 3vw;
+    width: 265px;
+    font-size: 12px;
 }
 
 .whats{
@@ -598,7 +598,7 @@ position: fixed;
 width: 60px;
 height: 60px;
 bottom: 40px;
-right: 45px;
+right: 35px;
 background-color: #25d366;
 color: #fff;
 border-radius: 50px;
@@ -616,19 +616,18 @@ z-index: 1000;
 .search-box{
     position: absolute;
     top: 150px;
-    left: 250px;
+    left: 230px;
     background: rgb(231, 230, 230);
     height: 36px;
     width: 130px;
     border-radius: 30px;
-    /* margin-top: 16px; */
     
 }
 
 .searce-text{
     position: absolute;
     top: 150px;
-    left: 260px;
+    left: 240px;
     box-shadow: 0 0 0 0;
     background: none;
     border: none;
@@ -647,15 +646,11 @@ z-index: 1000;
     width: 21px;
     height: 21px;
 }
-.lupa-branca{
-    display: none;
-}
 
-.logo4{
-    position: fixed;
-    top: -85px;
-    left:10px;
-    width: 370px;
-    height: 240px;
-    
+.tooltipsy{
+    padding: 10px;
+    max-width: 200px;
+    color: #303030;
+    background-color: #535353;
+    border: 1px #e9e8e8 solid;
 }
