--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -12,7 +12,7 @@
 #parte2{
     background-color: #38280a;
     border: none;
-    width:390px;
+    width:380px;
     height: 98px;
     position: fixed;
     top: 0px;
@@ -69,38 +69,28 @@
     left: 70px;
 }
 
-.feature{   
-
-    height: 1650px;
-    width: 380px;
-    position: absolute;
-    top: 200px;  
-    left: 0px;
-
-    justify-content: space-between; 
-}
-
 
 .img1{
-    height: 96px;
+    height: 110px;
     width: 96px;
     border-radius: 2px;
     position: absolute;
-    top: 0px;
-    left: 2px;
+    top: 195px;
+    left: 5px;
 }
 .rh-2{
-    width: 340px;
+    height: 5px;
+    width: 379px;
     position: absolute;
-    top: 95px;
-    left: 15px;
-    border-color:rgb(255, 255, 255);
+    top: 307px;
+    left: 0px;
+    background-color:rgb(139, 135, 135);
 
 }
 .feature-title{
     position: absolute;
-    top: 0px;
-    left: 102px;
+    top: 195px;
+    left: 107px;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
 }
@@ -108,65 +98,66 @@
 
 .af{
     position: absolute;
-    top: 2px;
-    left: 102px;
-    width: 265px;
+    top: 200px;
+    left: 107px;
+    width: 260px;
     font-size: 12px;
 }
 
 .atenc_{
     position: absolute;
-    top: 48px;
-    left: 102px;
+    top: 248px;
+    left: 107px;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;  
     color: #131413; 
 }
 .corp_{
     position: absolute;
-    top: 62px;
-    left: 102px;
+    top: 265px;
+    left: 107px;
     width: 750px;
     font-size: 12px; 
     font-family: 'Roboto', sans-serif;
 }
 
 .rh-3{
-    width: 340px;
+    height: 5px;
+    width: 379px;
     position: absolute;
-    top: 315px;
-    left: 15px;
-    border-color:rgb(255, 255, 255);
+    top: 446px;
+    left: 0px;
+    background-color:rgb(139, 135, 135);
 }
 .img2{
-    height: 96px;
+    height: 110px;
     width: 96px;
     border-radius: 2px;
     position: absolute;
-    top: 100px;
-    left:-8px;
+    top: 323px;
+    left:-5px;
 }
 
 .af-1{
     position: absolute;
-    top: 109px;
-    left: 102px;
-    width: 265px;
+    top: 340px;
+    left: 107px;
+    width: 260px;
     font-size: 12px;
 }
 
 .atenc_1{
     position: absolute;
-    top: 155px;
-    left: 102px;
+    top: 387px;
+    left: 107px;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;  
     color: #131413; 
 }
 .corp_1{
     position: absolute;
-    top: 170px;
-    left: 102px;
+    top: 405px;
+    left: 107px;
     width: 750px;
     font-size: 12px; 
     font-family: 'Roboto', sans-serif;
@@ -185,14 +176,14 @@
     width: 96px;
     border-radius: 2px;
     position: absolute;
-    top: 221px;
+    top: 621px;
     left: 2px;
 }
 
 
 .feature-title-02{
     position: absolute;
-    top: 217px;
+    top: 417px;
     left: 102px;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
@@ -201,10 +192,10 @@
 
 .af-2{
     position: absolute;
-    top: 225px;
+    top: 325px;
     left: 157px;
     width: 265px;
-    left: 102px;
+    left: 107px;
     font-size: 12px;
 }
 
@@ -221,14 +212,14 @@
     width: 96px;
     border-radius: 2px;
     position: absolute;
-    top: 331px;
+    top: 8031px;
     left: 2px;
 }
 
 .feature-title-01{
     position: absolute;
-    top: 106px;
-    left: 102px;
+    top: 335px;
+    left: 107px;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
 }
@@ -237,7 +228,7 @@
     top: 335px;
     left: 157px;
     width: 265px;
-    left: 102px;
+    left: 107px;
     font-size: 12px;
 }
 
@@ -263,7 +254,7 @@
     width: 96px;
     border-radius: 2px;
     position: absolute;
-    top: 440px;
+    top: 1000px;
     left: 2px;
 }
 
@@ -697,21 +688,21 @@ z-index: 1000;
     right: 45px;
     border-right: 0.5px solid rgb(189, 185, 185);
  
- }
+         }
  
  .avaliacao{
      display: flex;
      position: absolute;
-     top: 264px;
-     left: 60px;
+     top: 270px;
+     left: 65px;
      font-size: 1.2em;
         }
  
  .avaliacao_2{
      display: flex;
      position: absolute;
-     top: 373px;
-     left: 60px;
+     top: 408px;
+     left: 65px;
      font-size: 1.2em;
         }
  .avaliacao_3{
@@ -833,4 +824,13 @@ z-index: 1000;
  
  .star-icon:hover ~ .star-icon::before{
      content: "\2606";
+        }
+
+ .fundo-ls{
+    background-color: rgb(223, 222, 222);
+    position: absolute;
+    top: 100px;
+    height: 2440px;
+    width: 380px;
+    left: 0%;
         }
